CMAKE_MINIMUM_REQUIRED( VERSION 3.17.0 )

PROJECT( Jupiter )

INCLUDE_DIRECTORIES (
	/usr/local/include
	)

FIND_PACKAGE ( OpenGL REQUIRED )

SET( LIBS
	glfw
	GLEW
	${OPENGL_LIBRARIES}
	)

AUX_SOURCE_DIRECTORY ( ${PROJECT_SOURCE_DIR} SRCS )

ADD_EXECUTABLE( Jupiter ${SRCS} )

TARGET_LINK_LIBRARIES( Jupiter ${LIBS} )

TARGET_LINK_DIRECTORIES( Jupiter PUBLIC /usr/local/lib )
